add graphCMS integration, add posts fetch

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,40 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+
+
+const response = await fetch(
+    `${import.meta.env.PUBLIC_CMS_API}`,  {
+    method: 'POST',
+    headers: {
+      'Content-Type': 'application/json',
+      Accept: 'application/json',
+    },
+    body: JSON.stringify({
+      query: `
+        {
+          posts {
+            slug
+            title
+			date
+          }
+        }
+      `,
+    }),
+  }
+)
+const posts = await response.json()
 ---
-<Layout title="Welcome to Astro.">
+<Layout title="Hello Astro">
+	<div>
+	
+	</div>
 	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			Check out the <code>src/pages</code> directory to get started.<br/>
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
+		<h1><span class="text-gradient">Astro</span> Blog</h1>
 		<ul role="list" class="link-card-grid">
-			<Card href="https://docs.astro.build/" title="Documentation" body="Learn how Astro works and explore the official API docs." /> 
-			<Card href="https://astro.build/integrations/" title="Integrations" body="Supercharge your project with new frameworks and libraries." /> 
-			<Card href="https://astro.build/themes/" title="Themes" body="Explore a galaxy of community-built starter themes." /> 
-			<Card href="https://astro.build/chat/" title="Chat" body="Come say hi to our amazing Discord community. ❤️" />
+			{posts.data.posts.map(product => (
+      			<Card href={`/posts/${product.slug}`} title={`${product.title}`} body={`${product.date}`}/>
+    		))}
 		</ul>
 	</main>
 </Layout>
@@ -66,7 +87,7 @@ import Card from '../components/Card.astro';
 	}
 	.link-card-grid {
 		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
+		grid-template-columns: repeat(auto-fit, minmax(1fr, 1fr));
 		gap: 1rem;
 		padding: 0;
 	}
