--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -1,19 +1,17 @@
 ---
 import Layout from '../../layouts/Layout.astro'
-// TODO env handling 
+// TODO env handling
 // const { PUBLIC_CMS_API } = import.meta.env;
 
 export async function getStaticPaths() {
-  const response = await fetch(
-    `${import.meta.env.PUBLIC_CMS_API}`,
-    {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json',
-        Accept: 'application/json',
-      },
-      body: JSON.stringify({
-        query: `
+  const response = await fetch(`${import.meta.env.PUBLIC_CMS_API}`, {
+    method: 'POST',
+    headers: {
+      'Content-Type': 'application/json',
+      Accept: 'application/json',
+    },
+    body: JSON.stringify({
+      query: `
         { 
           posts {
             slug
@@ -24,11 +22,10 @@ export async function getStaticPaths() {
           }
         }
       `,
-      }),
-    }
-  )
+    }),
+  })
   const posts = await response.json()
-  const paths = posts.data.posts.map(post => ({
+  const paths = posts.data.posts.map((post) => ({
     params: {
       slug: post.slug,
     },
@@ -42,6 +39,6 @@ const post = Astro.props.post
 ---
 
 <Layout>
-    <h1>{post.title}</h1>
-    <p>{post.content.text}</p>
+  <h1>{post.title}</h1>
+  <p>{post.content.text}</p>
 </Layout>
